2023-04-18
----------

added:

* geo gain boost
* invulnerability
* infinite soul (mana)
* damage dealt
* nail attack range
* no hard landing after falling from height
* infinite double jump

known issues:

* need to collect some soul first to cast spells though it does not drain
