@@ -2,6 +2,7 @@
 using BepInEx.Configuration;
 using BepInEx.Logging;
 using HarmonyLib;
+using System.Security;
 
 namespace HolyKnight
 {
@@ -29,11 +30,14 @@ namespace HolyKnight
 		internal static ConfigEntry<bool> config_infinite_soul;
 		internal static ConfigEntry<float> config_damage_dealt_multiplier;
 		internal static ConfigEntry<float> config_nail_range_multiplier;
+		internal static ConfigEntry<bool> config_spamming_attack;
 		internal static ConfigEntry<bool> config_no_hard_landing;
 		internal static ConfigEntry<bool> config_infinite_double_jump;
+		internal static ConfigEntry<bool> config_free_charms;
 
 		internal void LoadConfigs()
 		{
+			// general gameplay
 			config_geo_gain_multiplier = Config.Bind("GENERAL",
 				"geo_gain_multiplier",
 				1f);
@@ -49,6 +53,10 @@ namespace HolyKnight
 			config_nail_range_multiplier = Config.Bind("GENERAL",
 				"nail_range_multiplier",
 				1f);
+			config_spamming_attack = Config.Bind("GENERAL",
+				"spamming_attack",
+				false,
+				"START SPAMMING THE ATTACK BUTTON!!!!! IMMEDIATELY!");
 			config_no_hard_landing = Config.Bind("GENERAL",
 				"no_hard_landing",
 				false,
@@ -56,6 +64,11 @@ namespace HolyKnight
 			config_infinite_double_jump = Config.Bind("GENERAL",
 				"infinite_double_jump",
 				false);
+			// charms and equipments
+			config_free_charms = Config.Bind("CHARMS AND EQUIPMENTS",
+				"free_charms",
+				false,
+				"allow equipping charms without occupying notches");
 		}
 	}
 }
