@@ -4,13 +4,15 @@ A BepInEx-based gameplay mod/tweak for Hollow Knight
 
 ## Included mods:
 
-* geo gain boost
-* invulnerability
-* infinite soul (mana)
+* charms without notch costs
 * damage dealt
+* geo gain boost
+* infinite double jump
+* infinite soul (mana)
+* invulnerability
 * nail attack range
 * no hard landing after falling from height
-* infinite double jump
+* spamming attack (no attack cooldown)
 
 ## How to use:
 
